# realTimeFaceDetect

./: .gitignore  README.md  pyproject.toml
src/: faceDetect.ipynb  realTimeFaceDetect.ipynb  realTimeFaceDetect.py  realTimeFaceDistance.py
